# TaxoTreeSet

./: .gitignore  LICENSE  README.md  extract_archaea_phyla.py  extract_bacteria_phyla.py  extract_eukaryote_phyla.py  main_discovery.py  main_generation.py  pyproject.toml  pyrightconfig.json  verify_integrity.py
analysis/snapshots/: state_pre_balancing.txt
configs/: README.md  mapping.json  mapping.schema.json  noise_patterns.json  noise_patterns.schema.json
docs/: BACKLOG.md  GLOSSARY.md  clade_holdout_benchmark.md  make_figures.py
docs/DESIGN/: registry_vault_resync.md  selective_download_design.md
docs/PLANS/: cami_evaluation_plan.md  caudoviricetes_cardinality.md  coding_vs_noncoding_sampling.md
docs/TODOs/: data_scope_questions.md  generation_scope_parameters.md  registry_vault_resync.md  selective_download_design.md
examples/: finetune_head.py  recover_heads.py
scripts/: benchmark_capacity_gpu.py  validate_selective_download.py
src/taxotreeset/: __main__.py  logging_utils.py  paths.py  ranks.py  taxonomy.py
src/taxotreeset/benchmark/: __init__.py  baselines.py  eval_set.py  holdout.py  reliability.py  scorer.py
src/taxotreeset/cli/: __init__.py  benchmark.py  composition.py  discover.py  generate.py  logging_setup.py  separability.py
src/taxotreeset/core/: generation_orchestrator.py  orchestrator.py  preflight.py
src/taxotreeset/core/_orchestration/: __init__.py  _cluster.py  _manifest.py  _scheduler.py  _splits.py  _sync.py
src/taxotreeset/core/generation/: __init__.py  _bottomup.py  _diskdedup.py  _encoding.py  _gpu.py  _keys.py  _spill.py  balancing.py  capacity.py  constants.py  distribution.py  low_capacity_bucket.py  rank_bucketing.py  reject_bucket.py  virtual_id.py
src/taxotreeset/core/generation/_capacity/: __init__.py  _bloom.py  _bottomup.py  _diskdedup.py  _gpu.py  _keys.py  _spill.py
src/taxotreeset/dataset/: analyzer.py  builder.py  composition.py  mapping_generator.py  separability.py  sequence_utils.py  tree_builder.py  utils.py
src/taxotreeset/io/: downloader.py  noise_filter.py  plasmid_release.py  registry.py
src/taxotreeset/scripts/: census_with_filter.py  cut_registry.py  explore_all_taxa.py  explore_caudoviricetes.py  test_balanced_plan.py  test_noise_filters.py
src/taxotreeset/utils/: taxonomy_utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_discovery_smoke.py  test_ncbi_acceptance.py  test_ncbi_discovery.py  test_parallel_builder.py  test_synthetic_pipeline.py
tests/unit/: _vault_fixture.py  test_analyzer.py  test_balancing.py  test_baselines.py  test_builder.py  test_builder_sharding.py  test_capacity.py  test_capacity_behavioral.py  test_cli.py  test_cluster.py  test_composition.py  test_constants.py  test_dataset_utils.py  test_distribution.py  test_downloader.py  test_eval_set.py  test_generation_orchestrator.py  test_holdout.py  test_logging_utils.py  test_low_capacity_bucket.py  test_mapping_generator.py  test_noise_filter.py  test_orchestrator_discovery.py  test_orchestrator_reports.py  test_paths.py  test_plasmid_release.py  test_preflight.py  test_rank_bucketing.py  test_ranks.py  test_registry.py  test_reject_bucket.py  test_reliability.py  test_scheduler_single_level.py  test_scorer.py  test_separability.py  test_sequence_utils.py  test_taxonomy.py  test_tree_builder_internals.py  test_virtual_id.py
